# datahub-local-bootstrap

./: README.md  ansible.cfg  inventory-sample.yml  pyproject.toml  renovate.json
roles/bootstrap/defaults/: _version.yaml
roles/bootstrap/defaults/main/: _version.yaml  main.yml  values_networking.yaml  values_other.yml  values_security.yaml  values_storage.yaml
roles/bootstrap/tasks/: main.yml
roles/prereq/tasks/: extras.yml  main.yml
