[project]
name = "datahub-local-bootstrap"
version = "0.1.0"
description = "Bootstrap a Kubernetes cluster via Ansible for deploying DataHub.local"
authors = [{ name = "Alvaro Santos Andres", email = "alvsanand@gmail.com" }]
requires-python = "<4.0,>=3.12"
readme = "README.md"
dependencies = [
    "ansible==13.1.0",
    "kubernetes==34.1.0",
]

[dependency-groups]
dev = [
    "yamllint==1.37.1",
    "ansible-lint==25.12.2",
]
